@@ -14,6 +14,10 @@ NEW FEATURES
 
     o new arguments '.padNA' and '.envir' in `seqGetData()`
 
+UTILITIES
+
+    o `seqAddValue()` adds vectors, matrices and data frame to "annotation/info"
+
 BUG FIXES
 
     o fix `seqGetData(, "genotype", .useraw=NA)`
